Majorly font rendering
Updated text rendering and some other changes I already forgot about